# SecureGuard

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CODEOWNERS  CONTRIBUTING.md  Caddyfile  LICENSE  README.md  README.ru.md  docker-compose.yml  run.bat  setup.bat
.github/: COMMIT_STYLE.md
.github/workflows/: dart-link-test.yml  go-link-static.yml  rust-link-static.yml
api/: README.md  buf.gen.yaml  buf.yaml
api/xyz/secureguard/v1/: types.proto
client/: package.json
client/cli/: README.md  analysis_options.yaml  pubspec.yaml
client/cli/lib/: secureguard_cli.dart
client/cli/test/clients/: global_interceptor_test.dart
client/cli/test/core/: grpc_errors_test.dart
client/cli/test/services/: config_service_test.dart  login_service_test.dart  password_crypto_service_test.dart
client/desktop/src/: index.html  main.js  styles.css
client/desktop/src-tauri/: Cargo.toml
client/desktop/src-tauri/icons/: icon.icns
client/desktop/src-tauri/src/: api.rs  crypto.rs  main.rs  protection.rs  screenshot_guard.rs
client/grpc/secureguard/v1/: mod.rs
client/grpc/stats/v1/: stats.v1.rs  stats.v1.tonic.rs
client/src/: index.html  main.js  styles.css
client/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
client/src-tauri/src/: api.rs  crypto.rs  main.rs  protection.rs  screenshot_guard.rs
client/src/old/: main.js
docs/: PROJECT_DOCS.md  USER_FAQ.md
password-manager/: package-lock.json
password-manager/src/: index.html  main.js  styles.css
password-manager/src-tauri/: Cargo.toml
password-manager/src-tauri/src/: crypto.rs  main.rs  protection.rs  screenshot_guard.rs
server/: .dockerignore  Dockerfile  docker-entrypoint.sh  sqlc.yaml
server/internal/: go.mod  go.sum
server/internal/api/v1/: types.pb.go
server/internal/app/config/: config.go  config_test.go
server/internal/app/logging/: logging.go  logging_test.go
server/internal/app/login/: auth.go  register.go  service.go  service_test.go
server/internal/app/meta/: meta.go
server/internal/app/passwords/: passwords.go  passwords_test.go
server/internal/app/ratelimit/: ratelimit.go
server/internal/app/sessions/: sessions.go  sessions_test.go  worker.go
server/internal/domain/: types.go
server/migrations/queries/: queries.sql
server/migrations/scheme/: locales.sql  sqlc.sql
server/starter/: .env.example  go.mod  go.sum  start.go
(+248 files in other folders)
