[package]
name = "secureguard"
version = "1.0.0"
edition = "2021"

[features]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.8", features = ["clipboard-all", "shell-open", "custom-protocol"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
aes-gcm = "0.10"
argon2 = "0.5"
sha2 = "0.10"
rand = "0.8"
base64 = "0.21"
hex = "0.4"
zeroize = { version = "1.7", features = ["derive"] }
once_cell = "1.19"
parking_lot = "0.12"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "winuser", "wingdi", "libloaderapi", "processthreadsapi",
    "memoryapi", "handleapi", "errhandlingapi", "debugapi",
    "tlhelp32", "psapi", "securitybaseapi", "wow64apiset",
    "winnt", "impl-default"
] }
winreg = "0.52"
