[package]
name = "secureguard"
version = "1.0.0"
edition = "2021"

[features]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "=1.6.8", features = ["clipboard-all", "shell-open", "custom-protocol"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
bcrypt = "0.15"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
tonic = { version = "0.14", features = ["transport", "tls-native-roots"] }
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.21"
sha2 = "0.10"
hex = "0.4"
zeroize = { version = "1.7", features = ["derive"] }
once_cell = "1.19"
parking_lot = "0.12"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "winuser", "wingdi", "libloaderapi", "processthreadsapi",
    "memoryapi", "handleapi", "errhandlingapi", "debugapi",
    "shellapi",
    "tlhelp32", "psapi", "securitybaseapi", "wow64apiset",
    "winnt", "impl-default"
] }
winreg = "0.52"
